force-app/main/default/objects/User/fields/Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature__c</fullName>
    <description>Email signature for User</description>
    <formula>FirstName + &quot; &quot; +  LastName + IF(ISBLANK(TEXT( Pronouns__c )),&quot;&quot;,&quot; (&quot; + TEXT( Pronouns__c ) + &quot;)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Signature</label>
    <type>Text</type>
</CustomField>