force-app/main/default/objects/User/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <label>Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>he/him</fullName>
            </value>
            <value>
                <fullName>she/her</fullName>
            </value>
            <value>
                <fullName>they/them</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>