force-app/main/default/objects/User/fields/RM_Applicant_Booking_URL__c.field-meta.xml
<CustomField>
    <fullName>RM_Applicant_Booking_URL__c</fullName>
    <description>URL link to a Recruitment Manager&apos;s Microsoft Booking page. Used during Application Nurturing process as a merge field in emails to applicants.</description>
    <inlineHelpText>URL link to a Recruitment Manager&apos;s Microsoft Booking page.</inlineHelpText>
    <label>RM Applicant Booking URL</label>
    <type>Url</type>
</CustomField>